effettuati vari hotfix per fluidità nei banner di riproduzione nella sezione galleria, fix sulle feature di upload post put con cloudinary, inizio di set per il deploy lato seo e meta data html